--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "antd": "^5.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-dsgov": "^0.9.1"
+    "react-dsgov": "^0.9.1",
+    "recharts": "^2.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
